--- a/framework/requirements.txt
+++ b/framework/requirements.txt
@@ -28,6 +28,7 @@ future==0.17.1
 google-api-core==1.16.0
 google-auth==1.28.0
 google-cloud-pubsub==1.4.3
+google-cloud-storage==1.39.0
 googleapis-common-protos==1.51.0
 grpc-google-iam-v1==0.12.3
 grpcio>=1.28.1,<=1.36.1
